fixed contacts with overflow x scroll

--- a/front_end/src/css/Contacts.css
+++ b/front_end/src/css/Contacts.css
@@ -1,3 +1,7 @@
 #contacts_title{
     text-align: center;
 }
+
+.contacts_canvas{
+    overflow-x: scroll;
+}
